# pcioasis-blog

./: .gitignore  CATEGORIES.md  README.md  hugo.toml
.github/workflows/: deploy.yml  generate-content-variants.yml  (+1 more)
agents/content-pipeline/: README.md  ai_backend.py  assemble_pr.py  env_help.py  gemini_client.py  generate_audio_overview.py  generate_audio_overview_variant.py  generate_variants.py  generate_video_arena.py  platform_specs.py  post_variants.py  preview_server.py  pyproject.toml  regenerate_arena_thumbnails.py  requirements.txt  run_video_arena_agent.py
agents/content-pipeline/audio_overview/: __init__.py  pipeline.py
agents/content-pipeline/tests/: test_agent_directions.py  test_ai_backend.py  test_arena_actions_thumbnails.py  test_audio_overview.py  test_azure_endpoint.py  test_final_pass_combine.py  test_generate_variants.py  test_load_ai_config.py  test_platform_specs.py  test_provider_briefs.py  test_video_arena_prompt.py  test_video_arena_prompt_store.py  test_video_arena_providers.py  test_video_arena_review.py  test_video_arena_thumbnails.py
agents/content-pipeline/video_arena/: AGENTS.md  __init__.py  agent_directions.py  arena_actions.py  credential_bootstrap.py  critique.py  final_pass_combine.py  orchestrator.py  poster_transform.py  prompt_builder.py  prompt_store.py  provider_briefs.py  review.py  thumbnails.py
agents/content-pipeline/video_arena/providers/: __init__.py  azure_sora.py  azure_sora_v1.py  azure_video_common.py  base.py  bedrock_luma.py  replicate_hailuo.py  vertex_veo.py
deploy/: VIDEO_GENERATORS.md
static/: CNAME
(+57 files in other folders)
