[project]
name = "pcioasis-content-pipeline"
version = "0.1.0"
description = "Multi-platform content variant generator for pcioasis-blog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "markdown>=3.5",
    "openai>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gemini = ["google-genai>=1.0"]
video-arena = [
    "google-genai>=1.0",
    "replicate>=1.0",
    "boto3>=1.35",
]
social = [
    "atproto>=0.0.55",
    "playwright>=1.40",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
